# shell-scene

./: Cargo.toml  DEVELOPMENT.md  Justfile  README.md  setup.sh
.github/workflows/: release.yml  rust.yml
coverage/master/: index.html
coverage/master/coverage/home/runner/work/shell-scene/shell-scene/src/: cli.rs.html  logging.rs.html  main.rs.html
coverage/master/coverage/home/runner/work/shell-scene/shell-scene/src/engine/: record.rs.html
coverage/master/coverage/home/runner/work/shell-scene/shell-scene/src/util/: deps.rs.html  fsx.rs.html  mod.rs.html  net.rs.html  proc.rs.html
player/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
player/scripts/: build-speech.ts  cast.sh  ttyd-cast.sh
player/src/: App.css  App.tsx  AsciinemaSync.tsx  ChapterSidebar.tsx  CompositionWeb.tsx  MoviePlayer.tsx  TitleCard.tsx  asciinema-player.d.ts  getCastDuration.ts  main.tsx  scenescript.ts  timelineDuration.ts
player/src/types/: shellScene.d.ts
player/src/utils/: layout.ts  withBase.ts
player/timelines/: README.md
src/: cli.rs  lib.rs  logging.rs  main.rs  prelude.rs
src/engine/: record.rs
src/util/: deps.rs  fsx.rs  mod.rs  net.rs  proc.rs
template/: Cargo.toml  DEVELOPMENT.md  LICENSE.txt  README.md
template/.github/workflows/: release.yml  rust.yml
template/src/: cli.rs  main.rs
