[package]
name = "shell-scene"
description = "shell-scene is a CLI tool"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/EnigmaCurry/shell-scene"
homepage = "https://github.com/EnigmaCurry/shell-scene"
license = "MIT"
keywords = []
categories = ["command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/shell-scene"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dependencies]
clap = "4.5.17"
clap_complete = "4.5.29"
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"

[dev-dependencies]
shell-words = "1.1.0"

[build-dependencies]
clap = "4.5.17"
clap_complete = "4.5.29"
dirs = "5.0.1"
